src/index.css
:root {
  --blue: #121558;
  --blue-dark: #0e0e35; /* theme-color */
  --blue-light: #3ecbff; /* theme-color */
  --gray: #6e6e6e;
  --gray-dark: #111;
  --green: #06bb2d;
  --green-dark: #207826;
  --green-light: #5dff80;
  --orange: #d19000;
  --orange-light: #ffcc5b;
  --red: #bb0606;
  --red-light: #ff5d5d;
  --white: #fafeff;

  --shadow-base: rgba(0, 0, 0, 0.5);
  --shadow-dark: rgba(0, 0, 0, 0.75);

  --border-radius: 0.05rem;

  --font-size-x-large: 6rem;

  --spacing-small: 0.75rem;
  --spacing-base: 1.2rem;

  --transition-base: 250ms;
  --transition-slow: 1s;
}

@keyframes slide-right {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(100vw);
  }
}
@keyframes slide-left {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100vw);
  }
}

html {
  height: 100%;
}

body {
  color: var(--white);
  cursor: default;
  display: flex;
  flex-direction: column;
  font-family: sans-serif;
  height: 100%;
  margin: 0;
  user-select: none;
}

.control-button {
  background: none;
  border: none;
  cursor: pointer;
  height: 4rem;
  outline: 0;
  padding: 0;
  text-align: center;
  transition: stroke var(--transition-base);
  width: 4rem;
}
.control-button > * {
  display: block;
}
.control-button--pause {
  stroke: var(--orange);
}
.control-button--pause:focus,
.control-button--pause:hover {
  stroke: var(--orange-light);
}
.control-button--play {
  stroke: var(--green);
}
.control-button--play:focus,
.control-button--play:hover {
  stroke: var(--green-light);
}
.control-button--stop {
  stroke: var(--red);
}
.control-button--stop:focus,
.control-button--stop:hover {
  stroke: var(--red-light);
}
.control-button__pause {
  display: none;
}
.control-button__play {
  display: block;
}
.control-button--pause .control-button__play {
  display: none;
}
.control-button--pause .control-button__pause {
  display: block;
}
.control-button:disabled {
  stroke: var(--gray);
}

.controls {
  align-items: center;
  display: flex;
  justify-content: center;
  padding: var(--spacing-small) 0;
}
.controls > :not(:last-child) {
  margin-right: var(--spacing-base);
}

.main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow-x: hidden;
  position: relative;
}

.display {
  animation-duration: var(--transition-base);
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
  bottom: 0;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}
.display--hidden {
  display: none;
}
.display--transition-in {
  animation-direction: reverse;
  animation-name: slide-right;
}
.display--transition-out {
  animation-name: slide-right;
}

.timers {
  animation-duration: var(--transition-base);
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  left: 0;
  margin: 0 auto;
  max-width: 20rem;
  padding: var(--spacing-base) calc(var(--spacing-base) / 2) 0;
  position: absolute;
  right: 0;
  top: 0;
}
.timers--hidden {
  display: none;
}
.timers--transition-in {
  animation-direction: reverse;
  animation-name: slide-left;
}
.timers--transition-out {
  animation-name: slide-left;
}

.gradient {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  transition: opacity var(--transition-slow);
  z-index: -1;
}
.gradient--bottom {
  background-image: linear-gradient(145deg, var(--blue), var(--blue-light));
}
.gradient--bottom--hidden {
  opacity: 0;
}
.gradient--top {
  background-image: linear-gradient(145deg, var(--gray-dark), var(--blue));
}

.header {
  background: var(--blue-dark);
  box-shadow: 0 0 var(--spacing-base) var(--shadow-dark);
  padding: var(--spacing-small) 0;
  text-align: center;
}

.header__heading {
  margin: 0;
}

.timer-button {
  --size: 5rem;

  background: var(--green);
  border-radius: 50%;
  border: var(--border-radius) solid var(--green-dark);
  box-shadow: 0.1rem 0.1rem 0.5rem var(--shadow-base);
  color: var(--white);
  cursor: pointer;
  display: block;
  flex: 0 1 var(--size);
  font-size: 1rem;
  font-weight: bold;
  height: var(--size);
  margin: calc(var(--spacing-small) / 2);
  outline: 0;
  transition: background-color var(--transition-base);
}
.timer-button:focus,
.timer-button:hover {
  background: var(--green-light);
}

.time-output {
  align-items: center;
  display: flex;
  flex-grow: 1;
  font-size: var(--font-size-x-large);
  justify-content: center;
}

